<resources>
    <string name="app_name">First Orion Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="posts_title">Posts</string>
    <string name="post_title">Title</string>
    <string name="post_body">Body</string>
    <string name="post_userId">UserId</string>
    <string name="userId_label">by user: </string>
    <string name="courierMakePost">Make Post</string>
    <string name="title_activity_create_post">CreatePostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit_post">Submit Post</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="name">name</string>
</resources>