<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreatePostActivity"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/post_title"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/etPostTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelTitle"/>

    <TextView
        android:id="@+id/labelBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/post_body"
        app:layout_constraintTop_toBottomOf="@id/etPostTitle"/>
    <EditText
        android:id="@+id/etPostBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelBody"/>

    <Button
        android:id="@+id/submitPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:text="@string/submit_post" />


</androidx.constraintlayout.widget.ConstraintLayout>