<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="150dp">

    <TextView
        android:id="@+id/labelBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/userId_label"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPostUserId"
        app:layout_constraintEnd_toStartOf="@+id/tvPostUserId"
        app:layout_constraintTop_toTopOf="@+id/tvPostUserId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvPostUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:gravity="center"
        android:text="@string/post_userId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPostBody"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/post_title"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPostTitle"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="@+id/tvPostTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPostTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/post_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTitle" />

    <TextView
        android:id="@+id/labelBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/post_body"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPostBody"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="@+id/tvPostBody"
        app:layout_constraintTop_toBottomOf="@+id/tvPostTitle" />

    <TextView
        android:id="@+id/tvPostBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/post_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBody" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>